# conversor-hojas-de-coste

./: .gitignore  ConversorOT.spec  pyproject.toml
conversor_hojas_coste/: job_line.py  join_ot.py  main.py  material_line.py  parse_file.py
tests/ejemplos/: 230838_de_09062025_a_04122025.xlsx  230838coste.txt  230839_de_09062025_a_04122025.xlsx  230839coste.txt  OT_juntadas.xlsx
tests/ejemplos/otros/: 230408coste.txt  230408venta.txt  230582coste.txt  230582venta.txt  230583coste.txt  230583venta.txt
