[tool.poetry]
name = "conversor-hojas-coste"
version = "0.1.0"
description = ""
authors = ["Ángel Fernández Sobrino <fernandezsobrinoangel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.15,>=3.10"
cyclopts = "^4.3.0"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


#  poetry run pyinstaller --onefile --path="./conversor_hojas_coste" --name="ConversorOT" ./conversor_hojas_coste/main.py